# jmnews

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  jm_profile.md  pyproject.toml
.github/workflows/: deploy.yml
src/jmnews/: briefing.py  config.py  filter.py  main.py  models.py  pipeline.py  storage.py
src/jmnews/delivery/: telegram.py
src/jmnews/sources/: __init__.py  base.py  berlin_presseportal.py  berliner_zeitung.py  brandenburg_vorschriften.py  bsfz.py  daks.py  diakonie_bb.py  dsee.py  ibb.py  ilb.py  insolvenz.py  integras.py  jugendhilfeportal.py  mbjs_brandenburg.py  nbf.py  nexxt_change.py  paritaet_berlin.py  rbb24.py  tagesspiegel.py  taz_berlin.py  vergabe_brandenburg.py  vpk.py
tests/: test_briefing.py  test_filter.py  test_models.py  test_pipeline.py  test_scheduler.py  test_smoke.py  test_storage.py  test_telegram.py
tests/fixtures/: berlin_presseportal.xml  generic_rss.xml  generic_scrape.html  tagesspiegel_sitemap.xml
tests/test_sources/: test_additional_rss.py  test_berlin_presseportal.py  test_scrapers.py  test_tagesspiegel.py
