[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmnews"
version = "0.1.0"
description = "Personalisierter News-Aggregator fuer JM (Berlin/Brandenburg)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "python-telegram-bot>=21",
    "feedparser>=6.0.10",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "loguru>=0.7",
    "python-dateutil>=2.9",
    "typer>=0.12",
]

[project.scripts]
jmnews = "jmnews.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jmnews"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["jmnews"]
